# dispersion_automation

./: .gitignore  README.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
examples/: walkthrough.ipynb
src/dispersion_meta/: __init__.py  bandit.py  config_space.py  hashing.py  io.py  meta_score.py  paths.py  propose.py  record_decision.py  record_outcome.py  schemas.py  synthetic.py  training_table.py
tests/: test_bandit.py  test_config_space.py  test_hashing.py  test_io.py  test_meta_score.py  test_propose.py  test_record_decision.py  test_record_outcome.py  test_schemas.py  test_synthetic.py  test_training_table.py
