[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dispersion-meta"
version = "0.1.0"
description = "Data layer for dispersion trading meta-optimization"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "scikit-learn>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dispersion_meta"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
